tests/integration/snapshots/test/test_test_invalid_filter_regex.stderr.txt
Invalid regex pattern [invalid regex: regex parse error:
    [invalid regex
    ^
error: unclosed character class
